# Tarea-Modelos-Produccion

./: .gitignore  PEIAMLOPS_Control_extracted.txt  README.md  notebook_demostracion.ipynb
rag-api/: Dockerfile  Dockerfile.multistage  Dockerfile.roto  Dockerfile.slim  README.md  docker-compose.yml  pyproject.toml
rag-api/app/: main.py
rag-api/data/: ddl.json
