[project]
name = "rag-compliance-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
